--- a/web/source/scss/index.scss
+++ b/web/source/scss/index.scss
@@ -32,8 +32,7 @@ body[data-controller="index"] {
   section.case-studies {
     p {
       max-width: 80rem;
-      margin-right: auto;
-      margin-left: auto;
+      margin: 0 auto 2rem;
       text-align: center;
     }
 
